[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "allocine-seances"
version = "0.0.11"
authors = [
  { name="lefevre-dev", email="louislefevre.dev@gmail.com" },
]
description = "Récupération des scéances de cinémas sur allociné"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "beautifulsoup4",
]

[project.urls]
"Homepage" = "https://github.com/lefevre-dev/AllocineAPI"
"Bug Tracker" = "https://github.com/lefevre-dev/AllocineAPI/issues"